--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
-  // "MicrosoftAppId": "b0845f57-52d0-403a-9046-56d7f7837098",
-  //"MicrosoftAppPassword": "tMv+]u$HnrcO1IVT({=}$CRHv",
+  "MicrosoftAppId": "b0845f57-52d0-403a-9046-56d7f7837098",
+  "MicrosoftAppPassword": "tMv+]u$HnrcO1IVT({=}$CRHv",
   "QnAKnowledgebaseId": "9fca4c24-fea1-4d1a-acee-fa3479713c18",
   "QnAAuthKey": "1eece6eb-2db1-4f8d-9576-294d94df9ab0",
   "QnAEndpointHostName": "restoconceptservice.azurewebsites.net",
